--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -49,10 +49,10 @@
   --vp-c-default-3: var(--vp-c-gray-3);
   --vp-c-default-soft: var(--vp-c-gray-soft);
 
-  --vp-c-brand-1: var(--vp-c-indigo-1);
-  --vp-c-brand-2: var(--vp-c-indigo-2);
-  --vp-c-brand-3: var(--vp-c-indigo-3);
-  --vp-c-brand-soft: var(--vp-c-indigo-soft);
+  --vp-c-brand-1: #758BFD;
+  --vp-c-brand-2: #AEB8FE;
+  --vp-c-brand-3: #92A2FE;
+  --vp-c-brand-soft: rgba(100, 108, 255, 0.14);
 
   --vp-c-tip-1: var(--vp-c-brand-1);
   --vp-c-tip-2: var(--vp-c-brand-2);
@@ -71,19 +71,90 @@
 }
 
 /**
+ * Component: Input
+ * -------------------------------------------------------------------------- */
+
+:root {
+  --vp-input-border-color: var(--vp-c-border);
+  --vp-input-bg-color: var(--vp-c-bg-alt);
+
+  --vp-input-switch-bg-color: var(--vp-c-default-soft);
+}
+
+/**
+ * Colors: Background
+ * -------------------------------------------------------------------------- */
+
+:root {
+  --vp-c-bg: var(--vp-c-white);
+  --vp-c-bg-alt: #F5F5F5;
+  --vp-c-bg-elv: var(--vp-c-white);
+  --vp-c-bg-soft: #F5F5F5;
+}
+
+.dark {
+  --vp-c-bg: #1A1D1F;
+  --vp-c-bg-alt: #16191A;
+  --vp-c-bg-elv: #1A1D1F;
+  --vp-c-bg-soft: #16191A;
+}
+
+/**
+ * Colors: Borders
+ * -------------------------------------------------------------------------- */
+
+:root {
+  --vp-c-border: #CCCCCC;
+  --vp-c-divider: #E0E0E0;
+  --vp-c-gutter: #E0E0E0;
+}
+
+.dark {
+  --vp-c-border: #383E43;
+  --vp-c-divider: #24282B;
+  --vp-c-gutter: #24282B;
+}
+
+/**
+ * Colors: Text
+ * -------------------------------------------------------------------------- */
+
+:root {
+  --vp-c-text-1: #151514;
+  --vp-c-text-2: #424241;
+  --vp-c-text-3: #50504F;
+}
+
+.dark {
+  --vp-c-text-1: #F2F4F3;
+  --vp-c-text-2: #979897;
+  --vp-c-text-3: #535352;
+}
+
+/**
  * Component: Button
  * -------------------------------------------------------------------------- */
 
 :root {
   --vp-button-brand-border: transparent;
-  --vp-button-brand-text: var(--vp-c-white);
-  --vp-button-brand-bg: var(--vp-c-brand-3);
+  --vp-button-brand-text: var(--vp-c-bg);
+  --vp-button-brand-bg: #758BFD;
   --vp-button-brand-hover-border: transparent;
-  --vp-button-brand-hover-text: var(--vp-c-white);
-  --vp-button-brand-hover-bg: var(--vp-c-brand-2);
+  --vp-button-brand-hover-text: var(--vp-c-bg);
+  --vp-button-brand-hover-bg: #92A2FE;
   --vp-button-brand-active-border: transparent;
-  --vp-button-brand-active-text: var(--vp-c-white);
-  --vp-button-brand-active-bg: var(--vp-c-brand-1);
+  --vp-button-brand-active-text: var(--vp-c-bg);
+  --vp-button-brand-active-bg: #AEB8FE;
+
+  --vp-button-alt-border: transparent;
+  --vp-button-alt-text: var(--vp-c-text-1);
+  --vp-button-alt-bg: var(--vp-c-default-3);
+  --vp-button-alt-hover-border: transparent;
+  --vp-button-alt-hover-text: var(--vp-c-text-1);
+  --vp-button-alt-hover-bg: var(--vp-c-default-2);
+  --vp-button-alt-active-border: transparent;
+  --vp-button-alt-active-text: var(--vp-c-text-1);
+  --vp-button-alt-active-bg: var(--vp-c-default-1);
 }
 
 /**
@@ -93,15 +164,15 @@
 :root {
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    #bd34fe 30%,
-    #41d1ff
+    90deg,
+    #758BFD 25%,
+    #AEB8FE
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
-    #bd34fe 50%,
-    #47caff 50%
+    #000000 50%,
+    #000000 50%
   );
   --vp-home-hero-image-filter: blur(44px);
 }
@@ -137,3 +208,11 @@
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
 
+/**
+ * Component: Color Mode
+ * -------------------------------------------------------------------------- */
+
+.VPSwitchAppearance .check {
+  transition: transform 0.5s ease !important;
+  transform: rotate(180deg);
+}
